--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/imagekit": "^3.1.5",
     "bcryptjs": "^3.0.2",
+    "imagekit": "^6.0.0",
+    "imagekitio-next": "^1.0.1",
     "mongoose": "^8.15.0",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
