--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/imagekit": "^3.1.5",
+    "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
     "imagekit": "^6.0.0",
     "imagekitio-next": "^1.0.1",
+    "lucide-react": "^0.511.0",
     "mongoose": "^8.15.0",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
